--- a/C# Doodle/Properties/Resources.resx
+++ b/C# Doodle/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="Monster1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Monster1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Paused" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Paused.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Personage" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Personage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
